--- a/src/.vscode/settings.json
+++ b/src/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
         "stdint.h": "c"
-    }
+    },
+    "editor.suggest.snippetsPreventQuickSuggestions": false,
+    "aiXcoder.showTrayIcon": true
 }
